<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VIHapp2 Tratamientos</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="titulo_principal">Pasos del Tratamiento</string>
    <string name="Loading">Loading</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="Sí">Sí</string>
    <string name="No">No</string>
    <string name="Hombre">Hombre</string>
    <string name="Mujer">Mujer</string>
    <string name="agregarAgenda">Agregar a Agenda</string>
    <string name="NoSe">No sé</string>
    <string name="title_activity_facebook">FacebookActivity</string>

    <!--  <string name="app_name">HelloFacebookSample</string>-->
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="app_id">355198514515820</string>
    <string name="exception">Exception: %1$s</string>

</resources>
