<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="552dp"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/genero"
        android:layout_marginTop="15dp"
        android:text="Género"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/genero"
        android:layout_marginTop="30dp"
        android:text="¿Está embarazada?"
        android:textSize="30sp" />    

    <RadioGroup
        android:id="@+id/embarazada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/genero"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="20dp"  >

        <RadioButton
            android:id="@+id/radioNo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sí"              
            android:enabled="false"/>

        <RadioButton
            android:id="@+id/radioNo4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/No"  
            android:enabled="false"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/genero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView4"
        android:layout_marginTop="71dp" >

        <RadioButton
            android:id="@+id/radioNo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"         
            android:checked="true"
            android:text="@string/Hombre"/>

        <RadioButton
            android:id="@+id/radioNo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"        
            android:text="@string/Mujer" />
    </RadioGroup>
 
    <RadioGroup
        android:id="@+id/diagnostico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/embarazada"
        android:layout_alignParentBottom="true" >

        <RadioButton
            android:id="@+id/radioNo5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sí" />

        <RadioButton
            android:id="@+id/radioNo6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/NoSe" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignRight="@+id/diagnostico"
        android:layout_below="@+id/embarazada"
        android:layout_marginTop="18dp"
        android:text="¿Diagnosticado?"
        android:textSize="30sp" />

</RelativeLayout>

</ScrollView>